# Visual_interface

./: CMakeLists.txt  README.md  Untitled Diagram.drawio  run.sh  run_functional.sh
include/: actions.hpp  core.hpp  visualizer.hpp
src/: core.cpp
test/: basic_drawing.cpp  functional_object_test.cpp
